generated-out/vanilla/dear-imgui-raw-vanilla/cbits/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef struct ImTextureRef_t ImTextureRef;
typedef unsigned int ImGuiID;      
typedef struct ImDrawList_t ImDrawList;                              
typedef struct ImGuiInputTextCallbackData_t ImGuiInputTextCallbackData;        
typedef struct ImGuiPlatformIO_t ImGuiPlatformIO;                              
typedef struct ImGuiStorage_t ImGuiStorage;                                    
typedef struct ImGuiStyle_t ImGuiStyle;                                        
typedef struct ImGuiViewport_t ImGuiViewport;                                  
typedef int ImGuiCol;             
typedef int ImGuiDataType;        
typedef int ImGuiMouseButton;     
typedef int ImGuiInputTextFlags;    
typedef int (*ImGuiInputTextCallback)(ImGuiInputTextCallbackData* data);  
struct ImVec4_t
{
    float x, y, z, w;
};
CIMGUI_API ImGuiPlatformIO* ImGui_GetPlatformIO(void);  
CIMGUI_API ImGuiStyle*      ImGui_GetStyle(void);       
CIMGUI_API const char* ImGui_GetVersion(void);                                  
ui or my application?" for details.
CIMGUI_API ImDrawList* ImGui_GetWindowDrawList(void);                             
CIMGUI_API float       ImGui_GetWindowWidth(void);                                
CIMGUI_API float       ImGui_GetWindowHeight(void);                               
CIMGUI_API float ImGui_GetScrollX(void);                                                     
CIMGUI_API float ImGui_GetScrollY(void);                                                     
CIMGUI_API float ImGui_GetScrollMaxX(void);                                                  
CIMGUI_API float ImGui_GetScrollMaxY(void);                                                  
CIMGUI_API const ImVec4* ImGui_GetStyleColorVec4(ImGuiCol idx);                            
CIMGUI_API void  ImGui_Indent(float indent_w );    
CIMGUI_API float ImGui_GetTextLineHeight(void);                
CIMGUI_API float ImGui_GetTextLineHeightWithSpacing(void);     
CIMGUI_API bool ImGui_InputText(const char* label, char* buf, size_t buf_size, ImGuiInputTextFlags flags , ImGuiInputTextCallback callback , void* user_data );
CIMGUI_API bool ImGui_InputFloat(const char* label, float* v, float step , float step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputFloat2(const char* label, float v[2], const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputFloat3(const char* label, float v[3], const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputFloat4(const char* label, float v[4], const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputInt(const char* label, int* v, int step , int step_fast , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputInt2(const char* label, int v[2], ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputInt3(const char* label, int v[3], ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputInt4(const char* label, int v[4], ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputDouble(const char* label, double* v, double step , double step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputScalar(const char* label, ImGuiDataType data_type, void* p_data, const void* p_step , const void* p_step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components, const void* p_step , const void* p_step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API float ImGui_GetTreeNodeToLabelSpacing(void);                                                                         
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API double                ImGui_GetTime(void);                                    
CIMGUI_API const char*           ImGui_GetStyleColorName(ImGuiCol idx);                  
CIMGUI_API ImGuiStorage*         ImGui_GetStateStorage(void);
struct ImGuiStorage_t
{
    ImVector_ImGuiStoragePair Data;
};
struct ImDrawList_t
{
    ImVector_ImDrawCmd    CmdBuffer;          
    ImVector_ImDrawIdx    IdxBuffer;          
    ImVector_ImDrawVert   VtxBuffer;          
    ImDrawListFlags       Flags;              
    unsigned int          _VtxCurrentIdx;     
    ImDrawListSharedData* _Data;              
    ImDrawVert*           _VtxWritePtr;       
    ImDrawIdx*            _IdxWritePtr;       
    ImVector_ImVec2       _Path;              
    ImDrawCmdHeader       _CmdHeader;         
    ImDrawListSplitter    _Splitter;          
    ImVector_ImVec4       _ClipRectStack;     
    ImVector_ImTextureRef _TextureStack;      
    ImVector_ImU8         _CallbacksDataBuf;  
    float                 _FringeScale;       
    const char*           _OwnerName;         
};
struct ImGuiViewport_t
{
    ImGuiID            ID;                 
    ImGuiViewportFlags Flags;              
    ImVec2             Pos;                
    ImVec2             Size;               
    ImVec2             FramebufferScale;   
    ImVec2             WorkPos;            
    ImVec2             WorkSize;           
    void*              PlatformHandle;     
    void*              PlatformHandleRaw;  
};
struct ImGuiPlatformIO_t
{
    const char* (*Platform_GetClipboardTextFn)(ImGuiContext* ctx);  
    void (*Platform_SetClipboardTextFn)(ImGuiContext* ctx, const char* text);
    void*                     Platform_ClipboardUserData;
    bool (*Platform_OpenInShellFn)(ImGuiContext* ctx, const char* path);
    void*                     Platform_OpenInShellUserData;
    void (*Platform_SetImeDataFn)(ImGuiContext* ctx, ImGuiViewport* viewport, ImGuiPlatformImeData* data);
    void*                     Platform_ImeUserData;
    ImWchar                   Platform_LocaleDecimalPoint;          
    int                       Renderer_TextureMaxWidth;
    int                       Renderer_TextureMaxHeight;
    void*                     Renderer_RenderState;
    ImVector_ImTextureDataPtr Textures;                             
};