generated-out/docking/dear-imgui-raw-docking/cbits/DearImGuiWrappers.h

void ImGui_GetMousePos_wrap(ImVec2* _out);
void ImGui_GetMousePosOnOpeningCurrentPopup_wrap(ImVec2* _out);
void ImGui_GetWindowContentRegionMax_wrap(ImVec2* _out);
void ImGui_GetWindowContentRegionMin_wrap(ImVec2* _out);
void ImGui_GetWindowPos_wrap(ImVec2* _out);
void ImGui_GetWindowSize_wrap(ImVec2* _out);
void ImGui_Image_wrap(ImTextureRef const* tex_ref, ImVec2 const* image_size, ImVec2 const* uv0, ImVec2 const* uv1);
bool ImGui_ImageButton_wrap(const char* str_id, ImTextureRef const* tex_ref, ImVec2 const* image_size, ImVec2 const* uv0, ImVec2 const* uv1, ImVec4 const* bg_col, ImVec4 const* tint_col);
void ImGui_ImageImVec4_wrap(ImTextureRef const* tex_ref, ImVec2 const* image_size, ImVec2 const* uv0, ImVec2 const* uv1, ImVec4 const* tint_col, ImVec4 const* border_col);
void ImGui_ImageWithBg_wrap(ImTextureRef const* tex_ref, ImVec2 const* image_size, ImVec2 const* uv0, ImVec2 const* uv1, ImVec4 const* bg_col, ImVec4 const* tint_col);
bool ImGui_InputTextMultiline_wrap(const char* label, char* buf, size_t buf_size, ImVec2 const* size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
void ImGui_PlotHistogramCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_PlotLinesCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);