generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw/ImGui.hsc


imGui_GetMouseDragDelta :: ImGuiMouseButton -> CFloat -> IO ImVec2
imGui_GetMouseDragDelta button lock_threshold =
  alloca $ \_pOut -> c_imGui_GetMouseDragDelta button lock_threshold _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImGui_GetMousePos_wrap"
  c_imGui_GetMousePos :: (Ptr ImVec2) -> IO ()

imGui_GetMousePos :: IO ImVec2
imGui_GetMousePos =
  alloca $ \_pOut -> c_imGui_GetMousePos _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImGui_GetMousePosOnOpeningCurrentPopup_wrap"
  c_imGui_GetMousePosOnOpeningCurrentPopup :: (Ptr ImVec2) -> IO ()

imGui_GetMousePosOnOpeningCurrentPopup :: IO ImVec2
imGui_GetMousePosOnOpeningCurrentPopup =
  alloca $ \_pOut -> c_imGui_GetMousePosOnOpeningCurrentPopup _pOut >> peek _pOut

-- C: ImGuiPlatformIO* ImGui::GetPlatformIO()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetPlatformIO"
  imGui_GetPlatformIO :: IO (Ptr ImGuiPlatformIO)
-- C: float ImGui::GetScrollMaxX()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetScrollMaxX"
  imGui_GetScrollMaxX :: IO CFloat
-- C: float ImGui::GetScrollMaxY()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetScrollMaxY"
  imGui_GetScrollMaxY :: IO CFloat
-- C: float ImGui::GetScrollX()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetScrollX"
  imGui_GetScrollX :: IO CFloat
-- C: float ImGui::GetScrollY()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetScrollY"
  imGui_GetScrollY :: IO CFloat
-- C: ImGuiStorage* ImGui::GetStateStorage()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetStateStorage"
  imGui_GetStateStorage :: IO (Ptr ImGuiStorage)
-- C: ImGuiStyle* ImGui::GetStyle()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetStyle"
  imGui_GetStyle :: IO (Ptr ImGuiStyle)
-- C: const char* ImGui::GetStyleColorName(ImGuiCol idx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetStyleColorName"
  imGui_GetStyleColorName :: ImGuiCol -> IO CString
-- C: const ImVec4* ImGui::GetStyleColorVec4(ImGuiCol idx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetStyleColorVec4"
  imGui_GetStyleColorVec4 :: ImGuiCol -> IO (Ptr ImVec4)
-- C: float ImGui::GetTextLineHeight()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetTextLineHeight"
  imGui_GetTextLineHeight :: IO CFloat
-- C: float ImGui::GetTextLineHeightWithSpacing()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetTextLineHeightWithSpacing"
  imGui_GetTextLineHeightWithSpacing :: IO CFloat
-- C: double ImGui::GetTime()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetTime"
  imGui_GetTime :: IO CDouble
-- C: float ImGui::GetTreeNodeToLabelSpacing()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetTreeNodeToLabelSpacing"
  imGui_GetTreeNodeToLabelSpacing :: IO CFloat
-- C: const char* ImGui::GetVersion()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetVersion"
  imGui_GetVersion :: IO CString
foreign import capi unsafe "DearImGuiWrappers.h ImGui_GetWindowContentRegionMax_wrap"
  c_imGui_GetWindowContentRegionMax :: (Ptr ImVec2) -> IO ()

imGui_GetWindowContentRegionMax :: IO ImVec2
imGui_GetWindowContentRegionMax =
  alloca $ \_pOut -> c_imGui_GetWindowContentRegionMax _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImGui_GetWindowContentRegionMin_wrap"
  c_imGui_GetWindowContentRegionMin :: (Ptr ImVec2) -> IO ()

imGui_GetWindowContentRegionMin :: IO ImVec2
imGui_GetWindowContentRegionMin =
  alloca $ \_pOut -> c_imGui_GetWindowContentRegionMin _pOut >> peek _pOut

-- C: ImGuiID ImGui::GetWindowDockID()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetWindowDockID"
  imGui_GetWindowDockID :: IO ImGuiID
-- C: float ImGui::GetWindowDpiScale()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetWindowDpiScale"
  imGui_GetWindowDpiScale :: IO CFloat
-- C: ImDrawList* ImGui::GetWindowDrawList()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetWindowDrawList"
  imGui_GetWindowDrawList :: IO (Ptr ImDrawList)
-- C: float ImGui::GetWindowHeight()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetWindowHeight"
  imGui_GetWindowHeight :: IO CFloat
foreign import capi unsafe "DearImGuiWrappers.h ImGui_GetWindowPos_wrap"
  c_imGui_GetWindowPos :: (Ptr ImVec2) -> IO ()

imGui_GetWindowPos :: IO ImVec2
imGui_GetWindowPos =
  alloca $ \_pOut -> c_imGui_GetWindowPos _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImGui_GetWindowSize_wrap"
  c_imGui_GetWindowSize :: (Ptr ImVec2) -> IO ()

imGui_GetWindowSize :: IO ImVec2
imGui_GetWindowSize =
  alloca $ \_pOut -> c_imGui_GetWindowSize _pOut >> peek _pOut

-- C: ImGuiViewport* ImGui::GetWindowViewport()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetWindowViewport"
  imGui_GetWindowViewport :: IO (Ptr ImGuiViewport)
-- C: float ImGui::GetWindowWidth()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_GetWindowWidth"
  imGui_GetWindowWidth :: IO CFloat
foreign import capi unsafe "DearImGuiWrappers.h ImGui_Image_wrap"
  c_imGui_Image :: (Ptr ImTextureRef) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()

imGui_Image :: ImTextureRef -> ImVec2 -> ImVec2 -> ImVec2 -> IO ()
imGui_Image tex_ref image_size uv0 uv1 =
  with tex_ref $ \_p0 -> with image_size $ \_p1 -> with uv0 $ \_p2 -> with uv1 $ \_p3 -> c_imGui_Image _p0 _p1 _p2 _p3

foreign import capi unsafe "DearImGuiWrappers.h ImGui_ImageButton_wrap"
  c_imGui_ImageButton :: CString -> (Ptr ImTextureRef) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec4) -> (Ptr ImVec4) -> IO CBool

imGui_ImageButton :: CString -> ImTextureRef -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec4 -> ImVec4 -> IO CBool
imGui_ImageButton str_id tex_ref image_size uv0 uv1 bg_col tint_col =
  with tex_ref $ \_p1 -> with image_size $ \_p2 -> with uv0 $ \_p3 -> with uv1 $ \_p4 -> with bg_col $ \_p5 -> with tint_col $ \_p6 -> c_imGui_ImageButton str_id _p1 _p2 _p3 _p4 _p5 _p6

foreign import capi unsafe "DearImGuiWrappers.h ImGui_ImageImVec4_wrap"
  c_imGui_ImageImVec4 :: (Ptr ImTextureRef) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec4) -> (Ptr ImVec4) -> IO ()

imGui_ImageImVec4 :: ImTextureRef -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec4 -> ImVec4 -> IO ()
imGui_ImageImVec4 tex_ref image_size uv0 uv1 tint_col border_col =
  with tex_ref $ \_p0 -> with image_size $ \_p1 -> with uv0 $ \_p2 -> with uv1 $ \_p3 -> with tint_col $ \_p4 -> with border_col $ \_p5 -> c_imGui_ImageImVec4 _p0 _p1 _p2 _p3 _p4 _p5

foreign import capi unsafe "DearImGuiWrappers.h ImGui_ImageWithBg_wrap"
  c_imGui_ImageWithBg :: (Ptr ImTextureRef) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec4) -> (Ptr ImVec4) -> IO ()

imGui_ImageWithBg :: ImTextureRef -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec4 -> ImVec4 -> IO ()
imGui_ImageWithBg tex_ref image_size uv0 uv1 bg_col tint_col =
  with tex_ref $ \_p0 -> with image_size $ \_p1 -> with uv0 $ \_p2 -> with uv1 $ \_p3 -> with bg_col $ \_p4 -> with tint_col $ \_p5 -> c_imGui_ImageWithBg _p0 _p1 _p2 _p3 _p4 _p5

-- C: void ImGui::Indent(float indent_w)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_Indent"
  imGui_Indent :: CFloat -> IO ()
-- C: bool ImGui::InputDouble(const char* label, double* v, double step, double step_fast, const char* format, ImGuiInputTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputDouble"
  imGui_InputDouble :: CString -> (Ptr CDouble) -> CDouble -> CDouble -> CString -> ImGuiInputTextFlags -> IO CBool
-- C: bool ImGui::InputFloat(const char* label, float* v, float step, float step_fast, const char* format, ImGuiInputTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputFloat"
  imGui_InputFloat :: CString -> (Ptr CFloat) -> CFloat -> CFloat -> CString -> ImGuiInputTextFlags -> IO CBool
-- C: bool ImGui::InputFloat2(const char* label, float[2] v, const char* format, ImGuiInputTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputFloat2"
  imGui_InputFloat2 :: CString -> (Ptr CFloat) -> CString -> ImGuiInputTextFlags -> IO CBool
-- C: bool ImGui::InputFloat3(const char* label, float[3] v, const char* format, ImGuiInputTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputFloat3"
  imGui_InputFloat3 :: CString -> (Ptr CFloat) -> CString -> ImGuiInputTextFlags -> IO CBool
-- C: bool ImGui::InputFloat4(const char* label, float[4] v, const char* format, ImGuiInputTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputFloat4"
  imGui_InputFloat4 :: CString -> (Ptr CFloat) -> CString -> ImGuiInputTextFlags -> IO CBool
-- C: bool ImGui::InputInt(const char* label, int* v, int step, int step_fast, ImGuiInputTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputInt"
  imGui_InputInt :: CString -> (Ptr CInt) -> CInt -> CInt -> ImGuiInputTextFlags -> IO CBool
-- C: bool ImGui::InputInt2(const char* label, int[2] v, ImGuiInputTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputInt2"
  imGui_InputInt2 :: CString -> (Ptr CInt) -> ImGuiInputTextFlags -> IO CBool
-- C: bool ImGui::InputInt3(const char* label, int[3] v, ImGuiInputTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputInt3"
  imGui_InputInt3 :: CString -> (Ptr CInt) -> ImGuiInputTextFlags -> IO CBool
-- C: bool ImGui::InputInt4(const char* label, int[4] v, ImGuiInputTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputInt4"
  imGui_InputInt4 :: CString -> (Ptr CInt) -> ImGuiInputTextFlags -> IO CBool
-- C: bool ImGui::InputScalar(const char* label, ImGuiDataType data_type, void* p_data, const void* p_step, const void* p_step_fast, const char* format, ImGuiInputTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputScalar"
  imGui_InputScalar :: CString -> ImGuiDataType -> (Ptr ()) -> (Ptr ()) -> (Ptr ()) -> CString -> ImGuiInputTextFlags -> IO CBool
-- C: bool ImGui::InputScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components, const void* p_step, const void* p_step_fast, const char* format, ImGuiInputTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputScalarN"
  imGui_InputScalarN :: CString -> ImGuiDataType -> (Ptr ()) -> CInt -> (Ptr ()) -> (Ptr ()) -> CString -> ImGuiInputTextFlags -> IO CBool
-- C: bool ImGui::InputText(const char* label, char* buf, size_t buf_size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputText"
  imGui_InputText :: CString -> (Ptr CChar) -> CSize -> ImGuiInputTextFlags -> ImGuiInputTextCallback -> (Ptr ()) -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_InputTextMultiline_wrap"
  c_imGui_InputTextMultiline :: CString -> (Ptr CChar) -> CSize -> (Ptr ImVec2) -> ImGuiInputTextFlags -> ImGuiInputTextCallback -> (Ptr ()) -> IO CBool

imGui_InputTextMultiline :: CString -> (Ptr CChar) -> CSize -> ImVec2 -> ImGuiInputTextFlags -> ImGuiInputTextCallback -> (Ptr ()) -> IO CBool
imGui_InputTextMultiline label buf buf_size size flags callback user_data =
  with size $ \_p3 -> c_imGui_InputTextMultiline label buf buf_size _p3 flags callback user_data
